some changes added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 class="title">Movie Booking App</h2>
+    <div class="container">
+        <h2 class="title">Movie Booking App</h2>
     <div class="screen">
     </div>
 
@@ -35,6 +36,7 @@
         <h3 class="title">Do you want to cancel the seat?</h3>
         <button class="yes-btn" type="submit">Yes</button>
         <button class="no-btn" type="submit">No</button>
+    </div>
     </div>
     <div class="rightsidebar">
         <h3 class="title">Seat Booking Details</h3>
